# PyLCModel

./: .gitattributes  .gitignore  LICENSE  LICENSE.lcmodel  MANIFEST.in  NOTICE  README.md  pyproject.toml
code/: frameworkLCM.py
data/basisset_JMRUI/: Ala.txt  Asc.txt  Asp.txt  Cr.txt  GABA.txt  GPC.txt  GSH.txt  Glc.txt  Gln.txt  Glu.txt  Gly.txt  Ins.txt  Lac.txt  Mac.txt  NAA.txt  NAAG.txt  PCho.txt  PCr.txt  PE.txt  Tau.txt  sIns.txt
data/datasets_JMRUI_WS/: dataset10.txt  dataset11.txt  dataset12.txt  dataset13.txt  dataset14.txt  dataset15.txt  dataset16.txt  dataset17.txt  dataset18.txt  dataset19.txt  dataset2.txt  dataset20.txt  dataset21.txt  dataset22.txt  dataset23.txt  dataset24.txt  dataset25.txt  dataset26.txt  dataset27.txt  dataset28.txt  dataset3.txt  dataset4.txt  dataset5.txt  dataset6.txt  dataset7.txt  dataset8.txt  dataset9.txt
data/datasets_JMRUI_nWS/: dataset10_nWS.txt  dataset11_nWS.txt  dataset12_nWS.txt  dataset13_nWS.txt  dataset14_nWS.txt  dataset15_nWS.txt  dataset16_nWS.txt  dataset17_nWS.txt  dataset18_nWS.txt  dataset19_nWS.txt  dataset1_nWS.txt  dataset20_nWS.txt  dataset21_nWS.txt  dataset22_nWS.txt  dataset23_nWS.txt  dataset24_nWS.txt  dataset25_nWS.txt  dataset26_nWS.txt  dataset27_nWS.txt  dataset28_nWS.txt  dataset2_nWS.txt  dataset3_nWS.txt  dataset4_nWS.txt  dataset5_nWS.txt  dataset6_nWS.txt  dataset7_nWS.txt  dataset8_nWS.txt  dataset9_nWS.txt
data/ground_truth/: dataset1.xlsx  dataset10.xlsx  dataset11.xlsx  dataset12.xlsx  dataset13.xlsx  dataset14.xlsx  dataset15.xlsx  dataset16.xlsx  dataset17.xlsx  dataset18.xlsx  dataset19.xlsx  dataset2.xlsx  dataset20.xlsx  dataset21.xlsx  dataset22.xlsx  dataset23.xlsx  dataset24.xlsx  dataset25.xlsx  dataset26.xlsx  dataset27.xlsx  dataset28.xlsx  dataset3.xlsx  dataset4.xlsx  dataset5.xlsx  dataset6.xlsx  dataset7.xlsx  dataset8.xlsx  dataset9.xlsx
lcmodel_wrapper/: __init__.py  basis.py  binaries.py  control.py  convert.py  coord.py  core.py  io.py
tests/: test_lcm.py
(+114 files in other folders)
