[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcmodel_wrapper"
version = "0.2.0"
description = "Lightweight Python wrapper for LCModel MRS fitting"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
  { name = "Julian Merkofer", email = "j.p.merkofer@tue.nl" }
]

# Core stays light. LCModel binaries are downloaded on demand from
# https://github.com/schorschinho/LCModel (or built from source via gfortran).
dependencies = [
  "numpy>=1.22",
  "scipy>=1.10",
  "nibabel>=4.0",
  "nifti-mrs>=1.0"
]

[project.optional-dependencies]
test = ["pandas>=1.4", "openpyxl>=3.0"]

[project.urls]
Homepage = "https://github.com/julianmer/PyLCModel"
Repository = "https://github.com/julianmer/PyLCModel"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["lcmodel_wrapper*"]
